--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
             <button type="button" class="btn btn-secondary" id="saveTable">Save Table</button>
           </div>
           <div class="text-center">
-            <button type="button" class="btn btn-secondary" id="deleteTable">Delete Current Table</button>
-          </div>
-          <div class="text-center">
-            <button type="button" class="btn btn-secondary" id="deleteAllTables">Delete All Tables</button>
+            <button type="button" class="btn btn-secondary" id="deleteAllTables">Delete All Saved Tables</button>
           </div>
         </div>
         <table id="resultTable-0"></table>
