Delete all tabs + Fixed bugs
Fixed bugs:
Entering invalid value in one form input and valid value in another form input can generate table
Entering invalid value in one form input and moving slider in another form input can generate table
Can save table with invalid inputs and generate table

--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
     Multiplication Table
   </h1>
   <div>
-    <h4 class="text-center">
-      Result
-    </h4>
     <div id="tabs">
       <ul class="ui-tabs-nav">
-        <li id="liTabs-0"><a href="#tabs-0">Home</a></li>
+        <li><a href="#tabs-0">Home</a></li>
       </ul>
       <div id="tabs-0">
         <!-- Form for inputs. Validate inputs are numbers using type="number". Non-number values will not be accepted. -->
