--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <!--
         File: /usr/cs/undergrad/2020/yzhu/public_html/index.html
-        COMP 4610 Assignment: Creating an Interactive Dynamic Table
+        COMP 4610 Assignment: Using the jQuery UI Slider and Tab Widgets
         Yinghui Zhu, Umass Lowell Computer Science, yinghui_zhu@student.uml.edu
         Copy (c) 2019 by Yinghui Zhu. All s reserved.
-        Updated October 8th 2019
+        Updated December 2nd 2019
 
         This file is a multiplication table
     -->
